--- a/index.html
+++ b/index.html
@@ -8,229 +8,177 @@
 
 <style>
 body {
-  margin: 0;
-  padding: 20px;
   font-family: Arial, sans-serif;
-  background: #020617;
-  color: #e5e7eb;
+  background:#0f172a;
+  color:#e5e7eb;
+  margin:0;
+  padding:20px;
 }
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-h1 {
-  margin: 0;
-  font-size: 2rem;
-}
-
-.update {
-  opacity: 0.8;
-  font-size: 1rem;
-}
-
-.section-title {
-  margin: 28px 0 10px;
-  font-size: 1.2rem;
-  opacity: 0.9;
-}
+h1 { margin-bottom:5px; }
+.small { opacity:0.7; font-size:0.9rem; }
 
 .grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
-  gap: 16px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:16px;
 }
-
 .card {
-  background: #020617;
-  border: 1px solid #1e293b;
-  border-radius: 14px;
-  padding: 14px;
-  text-align: center;
-  box-shadow: inset 0 0 0 1px #020617;
+  background:#020617;
+  border-radius:16px;
+  padding:16px;
+  box-shadow:0 10px 25px rgba(0,0,0,0.4);
 }
-
-.card h3 {
-  margin: 0 0 8px;
-  font-size: 1rem;
-  opacity: 0.85;
-}
-
 .value {
-  font-size: 2.6rem;
-  font-weight: bold;
+  font-size:2.1rem;
+  font-weight:bold;
+}
+.unit { opacity:0.7; }
+
+.section-title {
+  margin-top:30px;
+  margin-bottom:10px;
+  font-size:1.2rem;
 }
 
-.unit {
-  opacity: 0.6;
-}
-
-canvas {
-  margin-top: 10px;
-}
+canvas { margin-top:10px; }
 </style>
 </head>
 
 <body>
 
-<header>
-  <h1>🔥 Attack FD25 – Profi panel vytápění</h1>
-  <div class="update" id="updated">Aktualizace: –</div>
-</header>
+<h1>🔥 Attack FD25 – Rodinný dům</h1>
+<div class="small">
+  Automatický kotel FD25 · bojler 125 l Dražice<br>
+  ⏱️ Poslední aktualizace: <span id="lastUpdate">–</span>
+</div>
 
 <!-- TEPLOTY -->
-<div class="section-title">Teploty systému</div>
+<div class="section-title">🌡️ Teploty</div>
 <div class="grid">
-  <div class="card"><h3>Kotel</h3><div class="value" id="kotel">–</div><div class="unit">°C</div></div>
-  <div class="card"><h3>Výstup z kotle</h3><div class="value" id="vystup">–</div><div class="unit">°C</div></div>
-  <div class="card"><h3>Zpátečka</h3><div class="value" id="zpat">–</div><div class="unit">°C</div></div>
-  <div class="card"><h3>ΔT (výstup − zpátečka)</h3><div class="value" id="delta">–</div><div class="unit">°C</div></div>
-  <div class="card"><h3>TUV</h3><div class="value" id="tuv">–</div><div class="unit">°C</div></div>
-  <div class="card"><h3>Venkovní teplota</h3><div class="value" id="venek">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>Kotel</div><div class="value" id="f5">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>Výstup z kotle</div><div class="value" id="f2">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>Zpátečka kotle</div><div class="value" id="f1">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>ΔT (výstup − zpátečka)</div><div class="value" id="deltaT">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>TUV</div><div class="value" id="f3">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>Venkovní teplota</div><div class="value" id="f4">–</div><div class="unit">°C</div></div>
 </div>
 
 <!-- ENERGIE -->
-<div class="section-title">Ohřev TUV – energie</div>
+<div class="section-title">🚿 TUV – energie & uhlí</div>
 <div class="grid">
-  <div class="card"><h3>Dnešní energie TUV</h3><div class="value" id="today_kwh">–</div><div class="unit">kWh</div></div>
-  <div class="card"><h3>Energie TUV – posledních 24 h</h3><div class="value" id="day24_kwh">–</div><div class="unit">kWh</div></div>
-  <div class="card"><h3>Energie TUV – tento měsíc</h3><div class="value" id="month_kwh">–</div><div class="unit">kWh</div></div>
-</div>
+  <div class="card">
+    <div>Energie TUV – tento měsíc<br>
+      <span class="small">(od <span id="monthFrom">–</span>)</span>
+    </div>
+    <div class="value" id="energyMonth">–</div>
+    <div class="unit">kWh</div>
+  </div>
 
-<!-- UHLÍ -->
-<div class="section-title">Ekvivalent uhlí (hnědé – Bílina)</div>
-<div class="grid">
-  <div class="card"><h3>Dnes</h3><div class="value" id="today_coal">–</div><div class="unit">kg</div></div>
-  <div class="card"><h3>Posledních 24 h</h3><div class="value" id="day24_coal">–</div><div class="unit">kg</div></div>
-  <div class="card"><h3>Tento měsíc</h3><div class="value" id="month_coal">–</div><div class="unit">kg</div></div>
+  <div class="card">
+    <div>Uhlí – tento měsíc (Bílina)</div>
+    <div class="value" id="coalMonth">–</div>
+    <div class="unit">kg</div>
+  </div>
 </div>
 
 <!-- GRAF -->
-<div class="section-title">Graf teplot – posledních 24 hodin</div>
+<div class="section-title">📈 Historie teplot (posledních 24 h)</div>
 <div class="card">
   <canvas id="chart"></canvas>
 </div>
 
 <script>
 const CHANNEL_ID = 231269;
-
-/* FYZIKÁLNÍ KONSTANTY */
-const BOJLER_L = 125;
-const CP = 4.186;
-const ETA = 0.75;
-const COAL_KWH = 5.0;
+const RESULTS_24H = 96; // 24h / 15 min
+const BOILER_VOLUME = 125; // litry
+const TARGET_TEMP = 50;
+const COAL_KWH_PER_KG = 5;
 
 let chart;
 
-function energyFromDelta(dT) {
-  return BOJLER_L * CP * dT / 3600 / ETA;
-}
-
-async function fetchFeeds(results) {
-  const res = await fetch(
-    `https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=${results}`
-  );
-  const data = await res.json();
-  return data.feeds;
-}
+function round1(v){ return (v!==null && !isNaN(v)) ? Number(v).toFixed(1) : '–'; }
 
 async function loadData() {
+  const res = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=${RESULTS_24H}`);
+  const data = await res.json();
+  const feeds = data.feeds;
+  const last = feeds.at(-1);
 
-  /* ===== 24 HODIN ===== */
-  const feeds24 = await fetchFeeds(96);
-  const last = feeds24[feeds24.length - 1];
+  // čas aktualizace
+  document.getElementById('lastUpdate').textContent =
+    new Date(last.created_at).toLocaleString('cs-CZ');
 
-  document.getElementById("updated").textContent =
-    "Aktualizace: " + new Date(last.created_at).toLocaleString("cs-CZ");
+  // teploty
+  ['1','2','3','4','5'].forEach(i=>{
+    document.getElementById('f'+i).textContent = round1(last['field'+i]);
+  });
 
-  const vystup = +last.field2;
-  const zpat = +last.field1;
+  const deltaT = last.field2 - last.field1;
+  document.getElementById('deltaT').textContent = round1(deltaT);
 
-  document.getElementById("kotel").textContent = (+last.field5).toFixed(1);
-  document.getElementById("vystup").textContent = vystup.toFixed(1);
-  document.getElementById("zpat").textContent = zpat.toFixed(1);
-  document.getElementById("delta").textContent = (vystup - zpat).toFixed(1);
-  document.getElementById("tuv").textContent = (+last.field3).toFixed(1);
-  document.getElementById("venek").textContent = (+last.field4).toFixed(1);
+  // začátek měsíce
+  const startMonth = new Date();
+  startMonth.setDate(1);
+  startMonth.setHours(0,0,0,0);
+  document.getElementById('monthFrom').textContent =
+    startMonth.toLocaleDateString('cs-CZ');
 
-  let today = 0;
-  let day24 = 0;
-
-  const now = new Date(last.created_at);
-  const midnight = new Date(now); midnight.setHours(0,0,0,0);
-
-  for (let i = 1; i < feeds24.length; i++) {
-    const dT = feeds24[i].field3 - feeds24[i-1].field3;
-    if (dT <= 0) continue;
-
-    const e = energyFromDelta(dT);
-    day24 += e;
-
-    if (new Date(feeds24[i-1].created_at) >= midnight) {
-      today += e;
+  // energie TUV za měsíc (z rozdílů TUV)
+  let energyMonth = 0;
+  for (let i=1;i<feeds.length;i++){
+    const prev = feeds[i-1];
+    const cur = feeds[i];
+    if(new Date(cur.created_at) >= startMonth){
+      const dT = cur.field3 - prev.field3;
+      if(dT > 0){
+        energyMonth += BOILER_VOLUME * dT * 0.001163;
+      }
     }
   }
 
-  document.getElementById("today_kwh").textContent = today.toFixed(1);
-  document.getElementById("day24_kwh").textContent = day24.toFixed(1);
-  document.getElementById("today_coal").textContent = (today / COAL_KWH).toFixed(1);
-  document.getElementById("day24_coal").textContent = (day24 / COAL_KWH).toFixed(1);
+  const coalMonth = energyMonth / COAL_KWH_PER_KG;
 
-  /* ===== MĚSÍC ===== */
-  const feedsLong = await fetchFeeds(8000);
-  let month = 0;
-  const monthStart = new Date(now.getFullYear(), now.getMonth(), 1);
+  document.getElementById('energyMonth').textContent = round1(energyMonth);
+  document.getElementById('coalMonth').textContent = round1(coalMonth);
 
-  for (let i = 1; i < feedsLong.length; i++) {
-    const tPrev = new Date(feedsLong[i-1].created_at);
-    if (tPrev < monthStart) continue;
-
-    const dT = feedsLong[i].field3 - feedsLong[i-1].field3;
-    if (dT > 0) {
-      month += energyFromDelta(dT);
-    }
-  }
-
-  document.getElementById("month_kwh").textContent = month.toFixed(1);
-  document.getElementById("month_coal").textContent = (month / COAL_KWH).toFixed(1);
-
-  /* ===== GRAF 24 H ===== */
-  const labels = feeds24.map(f =>
-    new Date(f.created_at).toLocaleTimeString("cs-CZ",{hour:"2-digit",minute:"2-digit"})
+  // graf 24 h
+  const labels = feeds.map(f =>
+    new Date(f.created_at).toLocaleTimeString('cs-CZ',{hour:'2-digit',minute:'2-digit'})
   );
 
-  const datasets = [
-    {label:"Výstup", field:"field2"},
-    {label:"Zpátečka", field:"field1"},
-    {label:"TUV", field:"field3"},
-    {label:"Venkovní", field:"field4"}
-  ].map(c => ({
-    label: c.label,
-    data: feeds24.map(f => f[c.field]),
-    borderWidth: 2,
-    tension: 0.3
+  const datasetsCfg = [
+    {label:'Kotel', field:'field5'},
+    {label:'Výstup', field:'field2'},
+    {label:'Zpátečka', field:'field1'},
+    {label:'TUV', field:'field3'},
+    {label:'Venkovní', field:'field4'}
+  ];
+
+  const datasets = datasetsCfg.map(c=>({
+    label:c.label,
+    data:feeds.map(f=>f[c.field]),
+    borderWidth:2,
+    tension:0.3
   }));
 
-  if (chart) chart.destroy();
-  chart = new Chart(document.getElementById("chart"), {
-    type: "line",
-    data: { labels, datasets },
-    options: {
-      plugins: { legend: { labels: { color:"#e5e7eb" } } },
-      scales: {
-        x: { ticks:{ color:"#94a3b8" } },
-        y: { ticks:{ color:"#94a3b8" } }
+  if(chart) chart.destroy();
+  chart = new Chart(document.getElementById('chart'),{
+    type:'line',
+    data:{labels,datasets},
+    options:{
+      plugins:{legend:{labels:{color:'#e5e7eb'}}},
+      scales:{
+        x:{ticks:{color:'#94a3b8'}},
+        y:{ticks:{color:'#94a3b8'}}
       }
     }
   });
 }
 
 loadData();
-setInterval(loadData, 60000);
+setInterval(loadData,60000);
 </script>
 
 </body>
 </html>
+
