--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@ body {
 h1 { margin-bottom:5px; }
 .small { opacity:0.7; font-size:0.9rem; }
 
+.section-title {
+  margin-top:30px;
+  margin-bottom:10px;
+  font-size:1.2rem;
+}
+
 .grid {
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
@@ -33,12 +39,6 @@ h1 { margin-bottom:5px; }
   font-weight:bold;
 }
 .unit { opacity:0.7; }
-
-.section-title {
-  margin-top:30px;
-  margin-bottom:10px;
-  font-size:1.2rem;
-}
 
 canvas { margin-top:10px; }
 </style>
@@ -64,8 +64,20 @@ canvas { margin-top:10px; }
 </div>
 
 <!-- ENERGIE -->
-<div class="section-title">🚿 TUV – energie & uhlí</div>
+<div class="section-title">🚿 Spotřeba TUV</div>
 <div class="grid">
+  <div class="card">
+    <div>Denní energie TUV (od 00:00)</div>
+    <div class="value" id="energyDay">–</div>
+    <div class="unit">kWh</div>
+  </div>
+
+  <div class="card">
+    <div>Denní uhlí TUV (Bílina)</div>
+    <div class="value" id="coalDay">–</div>
+    <div class="unit">kg</div>
+  </div>
+
   <div class="card">
     <div>Energie TUV – tento měsíc<br>
       <span class="small">(od <span id="monthFrom">–</span>)</span>
@@ -75,94 +87,99 @@ canvas { margin-top:10px; }
   </div>
 
   <div class="card">
-    <div>Uhlí – tento měsíc (Bílina)</div>
+    <div>Uhlí TUV – tento měsíc (Bílina)</div>
     <div class="value" id="coalMonth">–</div>
     <div class="unit">kg</div>
   </div>
 </div>
 
 <!-- GRAF -->
-<div class="section-title">📈 Historie teplot (posledních 24 h)</div>
+<div class="section-title">📈 Historie teplot (24 h)</div>
 <div class="card">
   <canvas id="chart"></canvas>
 </div>
 
 <script>
 const CHANNEL_ID = 231269;
-const RESULTS_24H = 96; // 24h / 15 min
-const BOILER_VOLUME = 125; // litry
-const TARGET_TEMP = 50;
+const BOILER_VOLUME = 125;      // l
 const COAL_KWH_PER_KG = 5;
+const RESULTS_24H = 96;
 
 let chart;
 
-function round1(v){ return (v!==null && !isNaN(v)) ? Number(v).toFixed(1) : '–'; }
+function r1(v){ return (!isNaN(v) && v!==null) ? Number(v).toFixed(1) : '–'; }
 
 async function loadData() {
-  const res = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=${RESULTS_24H}`);
-  const data = await res.json();
-  const feeds = data.feeds;
-  const last = feeds.at(-1);
 
-  // čas aktualizace
+  /* ==== 24 HODIN ==== */
+  const res24 = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=${RESULTS_24H}`);
+  const data24 = await res24.json();
+  const feeds24 = data24.feeds;
+  const last = feeds24.at(-1);
+
   document.getElementById('lastUpdate').textContent =
     new Date(last.created_at).toLocaleString('cs-CZ');
 
-  // teploty
   ['1','2','3','4','5'].forEach(i=>{
-    document.getElementById('f'+i).textContent = round1(last['field'+i]);
+    document.getElementById('f'+i).textContent = r1(last['field'+i]);
   });
 
-  const deltaT = last.field2 - last.field1;
-  document.getElementById('deltaT').textContent = round1(deltaT);
+  document.getElementById('deltaT').textContent =
+    r1(last.field2 - last.field1);
 
-  // začátek měsíce
-  const startMonth = new Date();
-  startMonth.setDate(1);
-  startMonth.setHours(0,0,0,0);
+  /* ==== CELÁ HISTORIE ==== */
+  const resAll = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=8000`);
+  const all = (await resAll.json()).feeds;
+
+  const now = new Date();
+  const startDay = new Date(now); startDay.setHours(0,0,0,0);
+  const startMonth = new Date(now.getFullYear(), now.getMonth(), 1);
+
   document.getElementById('monthFrom').textContent =
     startMonth.toLocaleDateString('cs-CZ');
 
-  // energie TUV za měsíc (z rozdílů TUV)
-  let energyMonth = 0;
-  for (let i=1;i<feeds.length;i++){
-    const prev = feeds[i-1];
-    const cur = feeds[i];
-    if(new Date(cur.created_at) >= startMonth){
-      const dT = cur.field3 - prev.field3;
-      if(dT > 0){
-        energyMonth += BOILER_VOLUME * dT * 0.001163;
-      }
+  let eDay = 0, eMonth = 0;
+
+  for(let i=1;i<all.length;i++){
+    const prev = all[i-1];
+    const cur = all[i];
+    const t = new Date(cur.created_at);
+    const dT = cur.field3 - prev.field3;
+
+    if(dT > 0){
+      const e = BOILER_VOLUME * dT * 0.001163;
+      if(t >= startDay)   eDay   += e;
+      if(t >= startMonth) eMonth += e;
     }
   }
 
-  const coalMonth = energyMonth / COAL_KWH_PER_KG;
+  document.getElementById('energyDay').textContent = r1(eDay);
+  document.getElementById('coalDay').textContent   = r1(eDay / COAL_KWH_PER_KG);
+  document.getElementById('energyMonth').textContent = r1(eMonth);
+  document.getElementById('coalMonth').textContent   = r1(eMonth / COAL_KWH_PER_KG);
 
-  document.getElementById('energyMonth').textContent = round1(energyMonth);
-  document.getElementById('coalMonth').textContent = round1(coalMonth);
-
-  // graf 24 h
-  const labels = feeds.map(f =>
+  /* ==== GRAF 24 H ==== */
+  const labels = feeds24.map(f =>
     new Date(f.created_at).toLocaleTimeString('cs-CZ',{hour:'2-digit',minute:'2-digit'})
   );
 
-  const datasetsCfg = [
-    {label:'Kotel', field:'field5'},
-    {label:'Výstup', field:'field2'},
-    {label:'Zpátečka', field:'field1'},
-    {label:'TUV', field:'field3'},
-    {label:'Venkovní', field:'field4'}
+  const cfg = [
+    {l:'Kotel',f:'field5'},
+    {l:'Výstup',f:'field2'},
+    {l:'Zpátečka',f:'field1'},
+    {l:'TUV',f:'field3'},
+    {l:'Venkovní',f:'field4'}
   ];
 
-  const datasets = datasetsCfg.map(c=>({
-    label:c.label,
-    data:feeds.map(f=>f[c.field]),
+  const datasets = cfg.map(c=>({
+    label:c.l,
+    data:feeds24.map(f=>f[c.f]),
     borderWidth:2,
     tension:0.3
   }));
 
   if(chart) chart.destroy();
-  chart = new Chart(document.getElementById('chart'),{
+  chart = new Chart(chartElem,{
     type:'line',
     data:{labels,datasets},
     options:{
@@ -175,10 +192,10 @@ async function loadData() {
   });
 }
 
+const chartElem = document.getElementById('chart');
 loadData();
 setInterval(loadData,60000);
 </script>
 
 </body>
 </html>
-
