--- a/index.html
+++ b/index.html
@@ -57,65 +57,63 @@ canvas { margin-top:10px; }
 <div class="grid">
   <div class="card"><div>Kotel</div><div class="value" id="f5">–</div><div class="unit">°C</div></div>
   <div class="card"><div>Výstup z kotle</div><div class="value" id="f2">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Zpátečka kotle</div><div class="value" id="f1">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>ΔT (výstup − zpátečka)</div><div class="value" id="deltaT">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>Zpátečka</div><div class="value" id="f1">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>ΔT</div><div class="value" id="deltaT">–</div><div class="unit">°C</div></div>
   <div class="card"><div>TUV</div><div class="value" id="f3">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Venkovní teplota</div><div class="value" id="f4">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>Venkovní</div><div class="value" id="f4">–</div><div class="unit">°C</div></div>
 </div>
 
 <!-- ENERGIE -->
 <div class="section-title">🚿 Spotřeba TUV</div>
 <div class="grid">
   <div class="card">
-    <div>Denní energie TUV (od 00:00)</div>
+    <div>Denní energie TUV</div>
     <div class="value" id="energyDay">–</div>
     <div class="unit">kWh</div>
   </div>
 
   <div class="card">
-    <div>Denní uhlí TUV (Bílina)</div>
+    <div>Denní uhlí (Bílina)</div>
     <div class="value" id="coalDay">–</div>
     <div class="unit">kg</div>
   </div>
 
   <div class="card">
-    <div>Energie TUV – tento měsíc<br>
-      <span class="small">(od <span id="monthFrom">–</span>)</span>
-    </div>
+    <div>Měsíční energie TUV<br><span class="small">(od 1. dne)</span></div>
     <div class="value" id="energyMonth">–</div>
     <div class="unit">kWh</div>
   </div>
 
   <div class="card">
-    <div>Uhlí TUV – tento měsíc (Bílina)</div>
+    <div>Měsíční uhlí (Bílina)</div>
     <div class="value" id="coalMonth">–</div>
     <div class="unit">kg</div>
   </div>
 </div>
 
 <!-- GRAF -->
-<div class="section-title">📈 Historie teplot (24 h)</div>
+<div class="section-title">📈 Teploty – posledních 24 h</div>
 <div class="card">
   <canvas id="chart"></canvas>
 </div>
 
 <script>
 const CHANNEL_ID = 231269;
-const BOILER_VOLUME = 125;      // l
-const COAL_KWH_PER_KG = 0.27;
+const BOILER_VOLUME = 125;
+const COAL_KG_PER_KWH = 0.27;
 const RESULTS_24H = 96;
 
 let chart;
 
 function r1(v){ return (!isNaN(v) && v!==null) ? Number(v).toFixed(1) : '–'; }
 
-async function loadData() {
+async function loadData(){
 
-  /* ==== 24 HODIN ==== */
-  const res24 = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=${RESULTS_24H}`);
-  const data24 = await res24.json();
-  const feeds24 = data24.feeds;
-  const last = feeds24.at(-1);
+  /* ==== 24 h data ==== */
+  const r24 = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=${RESULTS_24H}`);
+  const d24 = await r24.json();
+  const f24 = d24.feeds;
+  const last = f24.at(-1);
 
   document.getElementById('lastUpdate').textContent =
     new Date(last.created_at).toLocaleString('cs-CZ');
@@ -127,24 +125,21 @@ async function loadData() {
   document.getElementById('deltaT').textContent =
     r1(last.field2 - last.field1);
 
-  /* ==== CELÁ HISTORIE ==== */
-  const resAll = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=8000`);
-  const all = (await resAll.json()).feeds;
+  /* ==== CELÁ HISTORIE (pro měsíc) ==== */
+  const rall = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=8000`);
+  const all = (await rall.json()).feeds;
 
   const now = new Date();
   const startDay = new Date(now); startDay.setHours(0,0,0,0);
   const startMonth = new Date(now.getFullYear(), now.getMonth(), 1);
 
-  document.getElementById('monthFrom').textContent =
-    startMonth.toLocaleDateString('cs-CZ');
-
   let eDay = 0, eMonth = 0;
 
   for(let i=1;i<all.length;i++){
-    const prev = all[i-1];
-    const cur = all[i];
-    const t = new Date(cur.created_at);
-    const dT = cur.field3 - prev.field3;
+    const p = all[i-1];
+    const c = all[i];
+    const t = new Date(c.created_at);
+    const dT = c.field3 - p.field3;
 
     if(dT > 0){
       const e = BOILER_VOLUME * dT * 0.001163;
@@ -155,31 +150,31 @@ async function loadData() {
 
   document.getElementById('energyDay').textContent = r1(eDay);
   document.getElementById('coalDay').textContent   = r1(eDay * COAL_KG_PER_KWH);
-document.getElementById('coalMonth').textContent = r1(eMonth * COAL_KG_PER_KWH);
-  document.getElementById('coalMonth').textContent   = r1(eMonth / COAL_KWH_PER_KG);
+  document.getElementById('energyMonth').textContent = r1(eMonth);
+  document.getElementById('coalMonth').textContent   = r1(eMonth * COAL_KG_PER_KWH);
 
-  /* ==== GRAF 24 H ==== */
-  const labels = feeds24.map(f =>
+  /* ==== GRAF ==== */
+  const labels = f24.map(f =>
     new Date(f.created_at).toLocaleTimeString('cs-CZ',{hour:'2-digit',minute:'2-digit'})
   );
 
   const cfg = [
-    {l:'Kotel',f:'field5'},
-    {l:'Výstup',f:'field2'},
-    {l:'Zpátečka',f:'field1'},
-    {l:'TUV',f:'field3'},
-    {l:'Venkovní',f:'field4'}
+    ['Kotel','field5'],
+    ['Výstup','field2'],
+    ['Zpátečka','field1'],
+    ['TUV','field3'],
+    ['Venkovní','field4']
   ];
 
   const datasets = cfg.map(c=>({
-    label:c.l,
-    data:feeds24.map(f=>f[c.f]),
+    label:c[0],
+    data:f24.map(f=>f[c[1]]),
     borderWidth:2,
     tension:0.3
   }));
 
   if(chart) chart.destroy();
-  chart = new Chart(chartElem,{
+  chart = new Chart(document.getElementById('chart'),{
     type:'line',
     data:{labels,datasets},
     options:{
@@ -192,7 +187,6 @@ document.getElementById('coalMonth').textContent = r1(eMonth * COAL_KG_PER_KWH);
   });
 }
 
-const chartElem = document.getElementById('chart');
 loadData();
 setInterval(loadData,60000);
 </script>
