--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ canvas { margin-top:12px; }
 <div class="section grid">
   <div class="card">
     <div>Příkon čerpadla (W)</div>
-    <input id="pumpPower" type="number" step="1">
+    <input id="pumpPower" type="number">
   </div>
   <div class="card">
     <div>Režim čerpadla</div>
@@ -107,6 +107,11 @@ canvas { margin-top:12px; }
     <div class="value" id="coalHeat">0</div>
     <div class="unit">kg</div>
   </div>
+  <div class="card">
+    <div>Energie TUV – tento měsíc<br><small id="tuvFrom">od –</small></div>
+    <div class="value" id="monthTUV">0.0</div>
+    <div class="unit">kWh</div>
+  </div>
 </div>
 
 <!-- GRAF -->
@@ -119,10 +124,15 @@ canvas { margin-top:12px; }
 const CHANNEL_ID = 231269;
 const RESULTS = 96;
 const COAL_PER_KWH = 0.27;
+const BOILER_L = 125;
+const COLD_WATER = 10;
+const HOT_WATER = 50;
 
 let lastTime = null;
+let lastTUV = null;
 let dailyHeat = 0;
 let monthlyHeat = 0;
+let monthlyTUV = Number(localStorage.getItem('monthlyTUV')) || 0;
 let chart = null;
 
 const chartEl = document.getElementById('chart');
@@ -139,6 +149,12 @@ pumpPower.value = localStorage.getItem('pumpPower') || 15;
 pumpMode.value = localStorage.getItem('pumpMode') || 'auto';
 pumpPower.onchange = () => localStorage.setItem('pumpPower', pumpPower.value);
 pumpMode.onchange = () => localStorage.setItem('pumpMode', pumpMode.value);
+
+if (!localStorage.getItem('tuvStart')) {
+  localStorage.setItem('tuvStart', new Date().toLocaleDateString('cs-CZ'));
+}
+document.getElementById('tuvFrom').textContent =
+  "od " + localStorage.getItem('tuvStart');
 
 async function loadData() {
   const res = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=${RESULTS}`);
@@ -184,10 +200,22 @@ async function loadData() {
   }
   lastTime = time;
 
+  // TUV výpočet
+  if (lastTUV !== null && f3 !== null) {
+    const dT = f3 - lastTUV;
+    if (dT > 5) {
+      const e = BOILER_L * dT * 0.001163;
+      monthlyTUV += e;
+      localStorage.setItem('monthlyTUV', monthlyTUV);
+    }
+  }
+  lastTUV = f3;
+
   document.getElementById('dayHeat').textContent = dailyHeat.toFixed(1);
   document.getElementById('monthHeat').textContent = monthlyHeat.toFixed(0);
   document.getElementById('coalHeat').textContent =
     (monthlyHeat * COAL_PER_KWH).toFixed(0);
+  document.getElementById('monthTUV').textContent = monthlyTUV.toFixed(1);
 
   drawChart(feeds);
 }
@@ -213,10 +241,7 @@ function drawChart(feeds) {
     data:{labels,datasets},
     options:{
       plugins:{legend:{labels:{color:'#e5e7eb'}}},
-      scales:{
-        x:{ticks:{color:'#94a3b8'}},
-        y:{ticks:{color:'#94a3b8'}}
-      }
+      scales:{x:{ticks:{color:'#94a3b8'}},y:{ticks:{color:'#94a3b8'}}}
     }
   });
 }
