--- a/index.html
+++ b/index.html
@@ -17,34 +17,36 @@ body {
 h1 { margin-bottom:4px; }
 small { color:#94a3b8; }
 
+.section { margin-top:24px; }
+
 .grid {
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:14px;
+  gap:16px;
 }
+
 .card {
   background:#020617;
-  border-radius:14px;
-  padding:14px;
-  box-shadow:0 8px 20px rgba(0,0,0,.4);
+  border-radius:16px;
+  padding:16px;
+  box-shadow:0 10px 25px rgba(0,0,0,0.4);
 }
+
+.label {
+  font-size:0.9rem;
+  opacity:.8;
+}
+
 .value {
-  font-size:2rem;
+  font-size:2.1rem;
   font-weight:bold;
 }
-.unit { opacity:.7; }
 
-input, select {
-  width:100%;
-  padding:6px;
-  margin-top:6px;
-  background:#020617;
-  color:#e5e7eb;
-  border:1px solid #334155;
-  border-radius:6px;
+.unit {
+  font-size:0.9rem;
+  opacity:.7;
 }
 
-.section { margin-top:22px; }
 canvas { margin-top:12px; }
 </style>
 </head>
@@ -52,202 +54,158 @@ canvas { margin-top:12px; }
 <body>
 
 <h1>🔥 Attack FD25 – Profi panel vytápění</h1>
-<small>Poslední aktualizace: <span id="lastUpdate">–</span></small>
+<small>Poslední aktualizace ThingSpeak: <span id="lastUpdate">–</span></small>
 
 <!-- TEPLOTY -->
 <div class="section grid">
-  <div class="card"><div>Kotel</div><div class="value" id="f5">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Výstup</div><div class="value" id="f2">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Zpátečka</div><div class="value" id="f1">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>ΔT</div><div class="value" id="dt">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>TUV</div><div class="value" id="f3">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Venkovní</div><div class="value" id="f4">–</div><div class="unit">°C</div></div>
+  <div class="card"><div class="label">Kotel</div><div class="value" id="f5">–</div><div class="unit">°C</div></div>
+  <div class="card"><div class="label">Výstup z kotle</div><div class="value" id="f2">–</div><div class="unit">°C</div></div>
+  <div class="card"><div class="label">Zpátečka kotle</div><div class="value" id="f1">–</div><div class="unit">°C</div></div>
+  <div class="card"><div class="label">ΔT (výstup − zpátečka)</div><div class="value" id="dt">–</div><div class="unit">°C</div></div>
+  <div class="card"><div class="label">Teplota TUV</div><div class="value" id="f3">–</div><div class="unit">°C</div></div>
+  <div class="card"><div class="label">Venkovní teplota</div><div class="value" id="f4">–</div><div class="unit">°C</div></div>
 </div>
 
-<!-- CERPADLO -->
+<!-- SPOTŘEBA -->
 <div class="section grid">
   <div class="card">
-    <div>Příkon čerpadla (W)</div>
-    <input id="pumpPower" type="number">
+    <div class="label">Denní energie – topení</div>
+    <div class="value" id="dayHeat">–</div>
+    <div class="unit">kWh</div>
   </div>
-  <div class="card">
-    <div>Režim čerpadla</div>
-    <select id="pumpMode">
-      <option value="auto">AUTOADAPT</option>
-      <option value="cp">Konstantní tlak</option>
-      <option value="cs">Konstantní otáčky</option>
-    </select>
-  </div>
-  <div class="card">
-    <div>Odhad průtoku</div>
-    <div class="value" id="flow">–</div>
-    <div class="unit">l/h</div>
-  </div>
-  <div class="card">
-    <div>Okamžitý výkon topení</div>
-    <div class="value" id="powerHeat">–</div>
-    <div class="unit">kW</div>
-  </div>
-</div>
 
-<!-- SPOTREBA -->
-<div class="section grid">
   <div class="card">
-    <div>Denní energie – topení</div>
-    <div class="value" id="dayHeat">0.0</div>
+    <div class="label">Měsíční energie – topení</div>
+    <div class="value" id="monthHeat">–</div>
     <div class="unit">kWh</div>
   </div>
+
   <div class="card">
-    <div>Měsíční energie – topení</div>
-    <div class="value" id="monthHeat">0</div>
-    <div class="unit">kWh</div>
-  </div>
-  <div class="card">
-    <div>Uhlí – topení (měsíc)</div>
-    <div class="value" id="coalHeat">0</div>
+    <div class="label">Uhlí – topení (tento měsíc)</div>
+    <div class="value" id="coalHeat">–</div>
     <div class="unit">kg</div>
   </div>
+
   <div class="card">
-    <div>Energie TUV – tento měsíc<br><small id="tuvFrom">od –</small></div>
-    <div class="value" id="monthTUV">0.0</div>
+    <div class="label">Energie TUV – tento měsíc</div>
+    <div class="value" id="monthTUV">–</div>
     <div class="unit">kWh</div>
   </div>
 </div>
 
 <!-- GRAF -->
 <div class="section card">
-  <h3>📈 Teploty – posledních 24 h</h3>
+  <h2>📈 Teploty – posledních 24 h</h2>
   <canvas id="chart"></canvas>
 </div>
 
 <script>
 const CHANNEL_ID = 231269;
-const RESULTS = 96;
+const FLOW_LH = 1080;      // průtok topení [l/h]
+const BOILER_L = 125;      // objem bojleru
 const COAL_PER_KWH = 0.27;
-const BOILER_L = 125;
-const COLD_WATER = 10;
-const HOT_WATER = 50;
-
-let lastTime = null;
-let lastTUV = null;
-let dailyHeat = 0;
-let monthlyHeat = 0;
-let monthlyTUV = Number(localStorage.getItem('monthlyTUV')) || 0;
-let chart = null;
-
-const chartEl = document.getElementById('chart');
-
-function flowFromPump(power, mode) {
-  if (!power) return 0;
-  let factor = 1;
-  if (mode === 'cp') factor = 0.9;
-  if (mode === 'cs') factor = 1.1;
-  return power * 60 * factor;
-}
-
-pumpPower.value = localStorage.getItem('pumpPower') || 15;
-pumpMode.value = localStorage.getItem('pumpMode') || 'auto';
-pumpPower.onchange = () => localStorage.setItem('pumpPower', pumpPower.value);
-pumpMode.onchange = () => localStorage.setItem('pumpMode', pumpMode.value);
-
-if (!localStorage.getItem('tuvStart')) {
-  localStorage.setItem('tuvStart', new Date().toLocaleDateString('cs-CZ'));
-}
-document.getElementById('tuvFrom').textContent =
-  "od " + localStorage.getItem('tuvStart');
 
 async function loadData() {
-  const res = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=${RESULTS}`);
+  const res = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=96`);
   const data = await res.json();
   const feeds = data.feeds;
-  if (!feeds.length) return;
+  if (feeds.length < 2) return;
+
+  let dayHeat = 0;
+  let monthHeat = 0;
+  let monthTUV = 0;
+
+  const now = new Date();
+  const currentMonth = now.getMonth();
+
+  for (let i = 1; i < feeds.length; i++) {
+    const a = feeds[i-1];
+    const b = feeds[i];
+
+    const t1 = new Date(a.created_at);
+    const t2 = new Date(b.created_at);
+    const hours = (t2 - t1) / 3600000;
+    if (hours <= 0 || hours > 1) continue;
+
+    const out = parseFloat(b.field2);
+    const ret = parseFloat(b.field1);
+
+    if (!isNaN(out) && !isNaN(ret)) {
+      const dT = out - ret;
+      const power = 0.00116 * FLOW_LH * dT;
+      const energy = power * hours;
+
+      if (t2.getMonth() === currentMonth) {
+        monthHeat += energy;
+      }
+      if (t2.toDateString() === now.toDateString()) {
+        dayHeat += energy;
+      }
+    }
+
+    const tuvA = parseFloat(a.field3);
+    const tuvB = parseFloat(b.field3);
+    if (!isNaN(tuvA) && !isNaN(tuvB)) {
+      const dTtuv = tuvB - tuvA;
+      if (dTtuv > 3 && t2.getMonth() === currentMonth) {
+        monthTUV += BOILER_L * dTtuv * 0.001163;
+      }
+    }
+  }
 
   const last = feeds.at(-1);
-  const time = new Date(last.created_at);
-
   document.getElementById('lastUpdate').textContent =
-    time.toLocaleString('cs-CZ');
+    new Date(last.created_at).toLocaleString('cs-CZ');
 
-  function val(n) {
-    const v = parseFloat(last[`field${n}`]);
-    return isNaN(v) ? null : v;
-  }
+  document.getElementById('f1').textContent = parseFloat(last.field1).toFixed(1);
+  document.getElementById('f2').textContent = parseFloat(last.field2).toFixed(1);
+  document.getElementById('f3').textContent = parseFloat(last.field3).toFixed(1);
+  document.getElementById('f4').textContent = parseFloat(last.field4).toFixed(1);
+  document.getElementById('f5').textContent = parseFloat(last.field5).toFixed(1);
 
-  const f1 = val(1), f2 = val(2), f3 = val(3), f4 = val(4), f5 = val(5);
-  if (f1==null || f2==null) return;
+  document.getElementById('dt').textContent =
+    (last.field2 - last.field1).toFixed(1);
 
-  document.getElementById('f1').textContent = f1.toFixed(1);
-  document.getElementById('f2').textContent = f2.toFixed(1);
-  if (f3!=null) document.getElementById('f3').textContent = f3.toFixed(1);
-  if (f4!=null) document.getElementById('f4').textContent = f4.toFixed(1);
-  if (f5!=null) document.getElementById('f5').textContent = f5.toFixed(1);
-
-  const dt = f2 - f1;
-  document.getElementById('dt').textContent = dt.toFixed(1);
-
-  const flow = flowFromPump(+pumpPower.value, pumpMode.value);
-  document.getElementById('flow').textContent = Math.round(flow);
-
-  const powerHeat = 0.00116 * flow * dt;
-  document.getElementById('powerHeat').textContent = powerHeat.toFixed(1);
-
-  if (lastTime) {
-    const hours = (time - lastTime) / 3600000;
-    if (hours > 0 && hours < 1) {
-      dailyHeat += powerHeat * hours;
-      monthlyHeat += powerHeat * hours;
-    }
-  }
-  lastTime = time;
-
-  // TUV výpočet
-  if (lastTUV !== null && f3 !== null) {
-    const dT = f3 - lastTUV;
-    if (dT > 5) {
-      const e = BOILER_L * dT * 0.001163;
-      monthlyTUV += e;
-      localStorage.setItem('monthlyTUV', monthlyTUV);
-    }
-  }
-  lastTUV = f3;
-
-  document.getElementById('dayHeat').textContent = dailyHeat.toFixed(1);
-  document.getElementById('monthHeat').textContent = monthlyHeat.toFixed(0);
+  document.getElementById('dayHeat').textContent = dayHeat.toFixed(1);
+  document.getElementById('monthHeat').textContent = monthHeat.toFixed(0);
   document.getElementById('coalHeat').textContent =
-    (monthlyHeat * COAL_PER_KWH).toFixed(0);
-  document.getElementById('monthTUV').textContent = monthlyTUV.toFixed(1);
+    (monthHeat * COAL_PER_KWH).toFixed(0);
+  document.getElementById('monthTUV').textContent = monthTUV.toFixed(1);
 
   drawChart(feeds);
 }
 
 function drawChart(feeds) {
   const labels = feeds.map(f =>
-    new Date(f.created_at).toLocaleTimeString('cs-CZ',{hour:'2-digit',minute:'2-digit'}));
+    new Date(f.created_at).toLocaleTimeString('cs-CZ',{hour:'2-digit',minute:'2-digit'})
+  );
 
   const datasets = [
-    {label:'Výstup', field:'field2'},
-    {label:'Zpátečka', field:'field1'},
-    {label:'TUV', field:'field3'}
-  ].map(c => ({
-    label:c.label,
-    data:feeds.map(f => f[c.field]),
+    {label:'Výstup', data:feeds.map(f=>f.field2)},
+    {label:'Zpátečka', data:feeds.map(f=>f.field1)},
+    {label:'TUV', data:feeds.map(f=>f.field3)},
+    {label:'Venkovní', data:feeds.map(f=>f.field4)}
+  ].map(d => ({
+    ...d,
     borderWidth:2,
-    tension:0.3
+    tension:.3
   }));
 
-  if (chart) chart.destroy();
-  chart = new Chart(chartEl, {
+  new Chart(document.getElementById('chart'), {
     type:'line',
     data:{labels,datasets},
     options:{
+      responsive:true,
       plugins:{legend:{labels:{color:'#e5e7eb'}}},
-      scales:{x:{ticks:{color:'#94a3b8'}},y:{ticks:{color:'#94a3b8'}}}
+      scales:{
+        x:{ticks:{color:'#94a3b8'}},
+        y:{ticks:{color:'#94a3b8'}}
+      }
     }
   });
 }
 
 loadData();
-setInterval(loadData,60000);
 </script>
 
 </body>
